# iseograph

./: .gitignore  README.md  pyproject.toml  test.py
backend/: .env.template  consts.py  settings.py  urls.py  views.py
data/: docs.md
frontend/: .lintstagedrc  .prettierrc  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/src/: index.css  index.ts  main.tsx
frontend/src/controls/: graph-controls.tsx  intensity-source-context.tsx  peptides-color.tsx
frontend/src/evaluation/: measurements-over-random-proteins-test.ts  measuring-tracker.ts  performance-test.ts  performance-tracker.ts  uniprotkb_AND_reviewed_true_2025_08_27.list  uniprotkb_ft_positional_VAR_SEQ_2025_08_26.list
frontend/src/graph/: IntensitySourceContext.tsx  controls.tsx  graph-manager.tsx  layout.tsx  store.ts
frontend/src/helper/: api-call.ts  constants.ts  delay.ts  outside-press.tsx
frontend/src/hooks/: index.tsx  multi-ref.ts  useLabelPosition.ts
scripts/: convert_graphml_to_json.py
test_data/: expected_JKXXAA_column_median.graphml  expected_JKXXAA_column_sum.graphml  expected_JKXXAA_compare_column.graphml  expected_JKXXAA_count.graphml  expected_JKXXAA_intensity.graphml  expected_JKXXAA_intensity_default.graphml  expected_JKXXAA_intensity_median.graphml  expected_JKXXAA_intensity_sum.graphml  expected_JKXXAB_count_edge.graphml  expected_JKXXAB_intensity_overlapping.graphml  expected_JKXXAB_overlapping_mean.graphml  expected_JKXXAB_overlapping_median.graphml  expected_JKXXAB_overlapping_sum.graphml  expected_JKXXIH.graphml
(+111 files in other folders)
