[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Repository for Jannes' and Sarah's BA on proteoforms and graphs."
authors = ["sarah <sarah.vogels@aol.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.2"
djangorestframework = "^3.16.0"
django-cors-headers = "^4.7.0"
python-decouple = "^3.8"
networkx = "^3.4.2"
protgraph = {git = "https://github.com/Tisch-hinten-rechts/ProtGraph.git", rev = "dev"}
requests = "^2.32.4"
tqdm = "^4.67.1"
igraph = "^0.11.9"
bio = "^1.8.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-django = "^4.11.1"
coverage = "^7.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
